# W2

./: .gitignore  README.md
hardwares/: boards.txt  platform.txt
hardwares/libraries/ADC/: library.properties
hardwares/libraries/ADC/src/: ADC.cpp  ADC.h
hardwares/libraries/EXINT/: library.properties
hardwares/libraries/EXINT/src/: EXINT.cpp  EXINT.h
hardwares/libraries/Flash/: library.properties
hardwares/libraries/Flash/src/: FLASH.cpp  FLASH.h
hardwares/libraries/GPIO/: library.properties
hardwares/libraries/GPIO/src/: GPIO.cpp  GPIO.h
hardwares/libraries/I2C/: library.properties
hardwares/libraries/I2C/src/: I2C.cpp  I2C.h
hardwares/libraries/SPI/: library.properties
hardwares/libraries/SPI/src/: SPI.cpp  SPI.h
hardwares/libraries/SYS/: library.properties
hardwares/libraries/SYS/src/: SYS.cpp  SYS.h
hardwares/libraries/Timer/: library.properties
hardwares/libraries/Timer/src/: Timer.cpp  Timer.h
hardwares/libraries/UART/: library.properties
hardwares/libraries/UART/src/: UART.cpp  UART.h
w2uploader/: CMakeLists.txt  README.md  main.cpp
w2uploader/CSerialPort/: CMakeLists.txt
w2uploader/CSerialPort/include/CSerialPort/: SerialPort.h  SerialPortBase.h  SerialPortHotPlug_mac.hpp  SerialPortInfo.h  SerialPortInfoBase.h  SerialPortInfoUnixBase.h  SerialPortInfoWinBase.h  SerialPortUnixBase.h  SerialPortWinBase.h  SerialPort_global.h  iutils.hpp
w2uploader/CSerialPort/lib/: CMakeLists.txt
w2uploader/CSerialPort/src/: SerialPort.cpp  SerialPortInfoWinBase.cpp  SerialPortUnixBase.cpp  SerialPortWinBase.cpp  directory_comment.txt
(+29 files in other folders)
